--- a/app/src/main/res/layout/activity_welcome1.xml
+++ b/app/src/main/res/layout/activity_welcome1.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WelcomeActivity1">
+    tools:context=".WelcomeActivity1"
+    android:background="@drawable/foodyfood">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:orientation="vertical">
 
         <TextView
@@ -17,7 +17,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/welcome"
-            android:textSize="50sp" />
+            android:textColor="@color/black"
+            android:textSize="50sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/welcomeName"
@@ -25,21 +27,27 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="First Last"
-            android:textSize="50sp" />
+            android:textColor="#f12711"
+            android:textSize="50sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/to"
-            android:textSize="50sp" />
+            android:textColor="@color/black"
+            android:textSize="50sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/app_name"
-            android:textSize="50sp" />
+            android:textColor="@color/black"
+            android:textSize="50sp"
+            android:textStyle="bold" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
