--- a/app/src/main/res/layout/activity_welcome1.xml
+++ b/app/src/main/res/layout/activity_welcome1.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="First Last"
-            android:textSize="50sp" />
+            android:textSize="50sp"
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="wrap_content"
