--- a/app/src/main/res/layout/activity_welcome3.xml
+++ b/app/src/main/res/layout/activity_welcome3.xml
@@ -8,12 +8,15 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:text="Add preferences screen placeholder"
-        android:textSize="40sp" />
+        android:layout_marginTop="20dp"
+        android:text="Choose your dietary preference"
+        android:textSize="40sp"
+        android:textAlignment="center"
+        android:textColor="@color/black" />
 
 
     <LinearLayout
