--- a/app/src/main/res/layout/activity_welcome4.xml
+++ b/app/src/main/res/layout/activity_welcome4.xml
@@ -7,10 +7,13 @@
     tools:context=".WelcomeActivity4">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:textSize="40sp"
-        android:text="Add allergies screen placeholder" />
+        android:text="Specify any allergies you have"
+        android:textAlignment="center"
+        android:textColor="@color/black" />
 
     <LinearLayout
         android:layout_width="wrap_content"
