Allow users to go back to home menu for each restaurant

--- a/app/src/main/res/layout/fragment_panda_express_sub_menu.xml
+++ b/app/src/main/res/layout/fragment_panda_express_sub_menu.xml
@@ -11,18 +11,45 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/pandaExpress_subMenu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <!-- Panda Express Icon -->
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="120dp"
+            <LinearLayout
+                android:id="@+id/pandaExpress_subMenu"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <!-- Panda Express Icon -->
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/panda_express_icon"/>
+
+                <Button
+                    android:id="@+id/pandaExpress_returnToMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="50dp"
+                    android:layout_marginBottom="15dp"
+                    android:text="@string/just_return"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/pandaExpress_addToCart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginVertical="25dp"
-                android:background="@drawable/panda_express_icon"/>
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginBottom="30dp"
+                android:text="@string/add_to_cart"
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
