--- a/app/src/main/res/layout/fragment_sub_menu.xml
+++ b/app/src/main/res/layout/fragment_sub_menu.xml
@@ -11,10 +11,44 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/subMenuFragment_subMenu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/subMenuFragment_logoParent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/subMenuFragment_subMenu"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/subMenu_returnToMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="50dp"
+                    android:layout_marginBottom="15dp"
+                    android:text="@string/just_return"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/subMenu_addToCart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginBottom="30dp"
+                android:text="@string/add_to_cart"
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
