--- a/app/src/main/res/layout/fragment_mcdonalds.xml
+++ b/app/src/main/res/layout/fragment_mcdonalds.xml
@@ -72,12 +72,15 @@
             <ImageButton
                 android:id="@+id/mcDonalds_bakery"
                 android:layout_width="wrap_content"
+                android:layout_height="0dp" />
+                <!--
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 app:srcCompat="@drawable/mcdonalds_mccafe_bakery"
                 android:background="@null"/>
+                -->
 
             <!-- McCafe Coffees -->
             <ImageButton
