--- a/app/src/main/res/layout/fragment_panda_express.xml
+++ b/app/src/main/res/layout/fragment_panda_express.xml
@@ -105,7 +105,7 @@
                 app:srcCompat="@drawable/panda_express_drinks"
                 android:background="@null"/>
 
-            <!-- Cancel (left0) or submit (right) buttons  -->
+            <!-- Cancel (left0) or submit (right) buttons
             <LinearLayout
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
@@ -117,7 +117,7 @@
                     android:gravity="center"
                     android:hint="Back"
                     android:textSize="9pt" />
-            </LinearLayout>
+            </LinearLayout> -->
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
