--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -28,9 +28,18 @@
 
     <Button
         android:id="@+id/reset_password_button"
+        android:text="Reset Password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/reset"/>
+        android:layout_marginTop="32dp" />
+    <Button
+        android:id="@+id/back_button"
+        android:text="Back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:padding="16dp" />
+
 
 </LinearLayout>
+
