--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -15,33 +15,45 @@
             android:id="@+id/mile_radius"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textOff="Show Mile Radius"
+            android:textOn="SHow Mile Radius"
             android:text="Mile Radius" />
 
         <ToggleButton
             android:id="@+id/Fast_food"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textOff="Show Fast Foods"
+            android:textOn="Show Fast Foods"
             android:text="Fast Food" />
 
         <ToggleButton
             android:id="@+id/Restaurants"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textOff="Show Restaurants"
+            android:textOn="Show Restaurants"
             android:text="Restaurants" />
         <ToggleButton
             android:id="@+id/Delivery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textOff="Have Delivery Option"
+            android:textOn="Have Delivery Option"
             android:text="Delivery Option" />
         <ToggleButton
             android:id="@+id/Show_times"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textOff="Show Reservation Times"
+            android:textOn="Show Reservation Times"
             android:text="Show Reservation Times" />
         <ToggleButton
             android:id="@+id/Condiments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textOff="Show Condiments"
+            android:textOn="Show Condiments"
             android:text="Condiments on the side" />
 
         <Button
