--- a/app/src/main/res/menu/home_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/home_bottom_navigation_menu.xml
@@ -5,8 +5,8 @@
         android:title="Home" />
 
     <item
-        android:id="@+id/homeMenuSearch"
-        android:title="Search" />
+        android:id="@+id/homeMenuCart"
+        android:title="Cart" />
 
     <item
         android:id="@+id/homeMenuProfile"
